<resources>
    <string name="app_name">tictactoe2</string>
    <string name="player1">Player 1</string>
    <string name="reset">Reset</string>
    <string name="quit">Quit</string>
    <string name="player2">Player 2</string>
    <string name="placeholder">Some dummy content that will be overwritten from code</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="name_of_player_one">   Name of Player One</string>
    <string name="name_of_player_two">   Name of Player Two</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="player_1">Player 1</string>
    <string name="play">PLAY</string>
    <string name="enter_the_name_of_players">Enter the name of Players</string>
    <string name="_0">0</string>
    <string name="total_score">Total Score:</string>
    <string name="quick_video">Quick Video</string>
    <string name="player_1_char_limit_10">Player 1 (char limit: 10)</string>
    <string name="exit">exit</string>
    <string name="colon1">:</string>
    <string name="colon2">:</string>
    <string name="player_2">Player 2</string>
    <string name="Player_1"> Player 1</string>
    <string name="Player_2"> Player 2</string>
    <string name="go_back">GO BACK</string>
    <string name="exit_app">Exit App</string>
    <string name="player_2_char_limit_10">Player 2 (char limit:10)</string>
    <string name="_">player_2_char_limit_10</string>
    <string name="player_2_char_limit_10_">Player 2 (char limit: 10)</string>
    <string name="change_color">Change Color</string>


</resources>
