<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    android:orientation="vertical"
    tools:context=".Game">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/colon1"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="162dp"
            android:layout_marginTop="-14dp"
            android:fontFamily="casual"
            android:text="@string/colon1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/colon2"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="368dp"
            android:layout_marginTop="-14dp"
            android:fontFamily="casual"
            android:text="@string/colon2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/P2"
            android:layout_width="160dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="208dp"
            android:layout_marginBottom="3dp"
            android:text="@string/player_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="casual" />

        <TextView
            android:id="@+id/score2"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="375dp"
            android:layout_marginTop="0dp"
            android:fontFamily="casual"
            android:text="@string/_0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/P1"
            android:layout_width="160dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/player_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="casual" />

        <TextView
            android:id="@+id/score1"
            android:layout_width="38dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="169dp"
            android:layout_marginTop="-4dp"
            android:fontFamily="casual"
            android:text="@string/_0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="45dp"
        android:paddingBottom="45dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/button_00"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/grid"
                android:textSize="50sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button_01"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/grid"
                android:textSize="50sp" />
x
            <Button

                android:id="@+id/button_02"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/grid"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_03"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/grid"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_04"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/grid"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_05"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/grid"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_06"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/grid"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_07"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/grid"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_08"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/grid"
                android:textSize="50sp" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/resetGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-2dp"
            android:text="@string/reset" />

        <Button
            android:id="@+id/quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="220dp"
            android:layout_marginEnd="5sp"
            android:layout_toEndOf="@+id/resetGame"
            android:onClick="quit"
            android:text="@string/quit" />

        <Button
            android:id="@+id/playMusic"
            android:layout_width="42dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/speaker"
            android:onClick="playIT" />

        <Button
            android:id="@+id/mute"
            android:layout_width="42dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="220dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/mute"
            android:backgroundTintMode="screen"
            android:onClick="mute" />


    </RelativeLayout>
</LinearLayout>
